<resources>
    <string name="app_name">Landscape Record</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="incorrect_date_format">Date format incorrect. Please reenter the date using
        MM/DD/YYYY.</string>
    <string name="check_in_text">Check In</string>
    <string name="check_out_text">Check Out</string>
    <string name="hrs">hrs</string>
    <string name="mi">mi</string>
    <string name="money">$</string>
    <string name="accountNameText">Account:</string>
    <string name="payment_check">Check</string>
    <string name="payment_cash">Cash</string>
    <string name="payment_cash_amount">Amount</string>
    <string name="payment_check_number">Check #</string>
    <string name="submit_button">Submit</string>
    <string name="payment_amount_hint">The amount of money received</string>
    <string name="payment_check_number_hint">If payment is a check, include the check number</string>
    <string name="contact_first_name">First:</string>
    <string name="contact_last_name">Last:</string>
    <string name="contact_phone_number">Phone:</string>
    <string name="contact_email">Email:</string>
    <string name="contact_business">Business:</string>
    <string name="contact_address">Address:</string>
    <string name="contact_city">City:</string>
    <string name="contact_state">State:</string>
    <string name="email_example">John.Smith@Example.com</string>
    <string name="address_example">12300 Country Road</string>
    <string name="city_example">Chicago</string>
    <string name="name_text_field">Name</string>
    <string name="phone_number_example">123&#8211;456&#8211;7890</string>
    <string name="main_menu_time">Time Reporting\nCheck-in and check-out for employees. Accumulates employee hours.</string>
    <string name="main_menu_job">Job Reporting\nA full version of service reporting (for checklist style reporting, see menu bar above).</string>
    <string name="main_menu_payment">Payment Reporting</string>
    <string name="main_menu_contact">New Contact</string>
    <string name="main_menu_admin">Admin Tools</string>
    <string name="main_menu_users">Employees\nA list of all employees. Add, edit, and view information regarding employees.</string>
    <string name="main_menu_contacts">Customers\nA list of all expenses. Add, edit, and view information regarding expenses.</string>
    <string name="admin_tools_workday">View Workday\n\nLook at services and employee hours for past workdays. Sort by day, week, or month.</string>
    <string name="admin_tools_logs">View Activity Logs\n\nLook at the logs of employee activity, starting with the most recent.</string>
    <string name="job_lawn_service">Lawn</string>
    <string name="job_landscaping_services">Landscaping</string>
    <string name="job_snow_services">Snow</string>
    <string name="job_services_no_customer">No customer selected. Please select or create a customer.</string>
    <string name="user_options">Manage Users</string>
    <string name="add_user">Add User</string>
    <string name="delete_user">Delete User</string>
    <string name="view_users">View Users</string>
    <string name="update_user">Update User Information</string>
    <string name="add_user_first">First</string>
    <string name="add_user_last">Last</string>
    <string name="add_user_hours">Start Hours (opt.)</string>
    <string name="user_options_payment_queue">Payment Queue</string>
    <string name="user_options_hour_operations">Hour Operations</string>
    <string name="password">Password</string>
    <string name="view_user_search">Search</string>
    <string name="login_page_username">Username</string>
    <string name="login_page_logged">You are now logged in as</string>
    <string name="login_page_main_menu">Main Menu</string>
    <string name="login_page_settings">Settings</string>
    <string name="login_page_failed">Could not log in with the provided credentials</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_add_contact">Contacts</string>
    <string name="menu_add_grass">+G</string>
    <string name="menu_add_service">Add Service</string>
    <string name="menu_add_landscaping">+L</string>
    <string name="job_creation">Create New Job</string>
    <string name="job_completion">Finish Pending Job</string>
    <string name="lawn_services_cut">Cut</string>
    <string name="lawn_services_man_hours">Man Hours:</string>
    <string name="lawn_services_prune">Prune</string>
    <string name="lawn_services_fertilize">Fertilize</string>
    <string name="lawn_services_leaves">Remove Leaves</string>
    <string name="lawn_services_aerate">Aerate</string>
    <string name="law_services_pull_weed">Pull Weeds</string>
    <string name="lawn_services_spray_rocks">Spray Landscape</string>
    <string name="lawn_services_spray_grass">Spray Grass</string>
    <string name="lawn_services_clean_up">Clean Up</string>
    <string name="lawn_services_rake">Rake</string>
    <string name="lawn_services_other">Other:</string>
    <string name="lawn_services_employees">Number of Employees:</string>
    <string name="lawn_services_optional">Leave blank to autogenerate</string>
    <string name="snow_services_shovel">Shovel</string>
    <string name="snow_services_plow">Plow</string>
    <string name="snow_services_snow_blow">Snow Blow</string>
    <string name="snow_services_salt">Salt</string>
    <string name="snow_services_salt_bags">(Optional) bags of salt</string>
    <string name="land_services_mulch">Mulch</string>
    <string name="land_services_dirt">Dirt</string>
    <string name="land_services_stone">Stone</string>
    <string name="remove_items">Remove:</string>
    <string name="land_services_brick">Bricks</string>
    <string name="land_services_drainage">Drainage</string>
    <string name="land_services_edging">Edging</string>
    <string name="land_services_dump">Dump</string>
    <string name="land_services_sod">Sod</string>
    <string name="land_services_seed">Seed</string>
    <string name="land_services_till">Till</string>
    <string name="land_services_plants">Plants</string>
    <string name="material_type">Type</string>
    <string name="material_price">Price</string>
    <string name="land_services_materials">List of Materials Added/Removed:</string>
    <string name="button_add_material">Addition of Material</string>
    <string name="land_services_material_name">Material name</string>
    <string name="land_services_quantity">Qty</string>
    <string name="remove_button_material">Removal of Material</string>
    <string name="contact_first_name_hint">John</string>
    <string name="contact_last_name_hint">Smith</string>
    <string name="contact_business_hint">Company Inc.</string>
    <string name="date_time">Date/Time:</string>
    <string name="date_time_hint">(Opt.)mm/dd/yyyy</string>
    <string name="man_hours_hint">(Opt.)hrs</string>
    <string name="delete_button">Delete</string>
    <string name="material_item_add_remove">Add/Remove</string>
    <string name="add_user_admin">Admin</string>
    <string name="land_services_delete_material">Delete Material</string>
    <string name="hours_operations_hours">Hours</string>
    <string name="hours_operations_pay">Pay</string>
    <string name="hours_operations_add">Add</string>
    <string name="hour_operations_remove">Remove</string>
    <string name="hour_operations_remaining">remaining.</string>
    <string name="hour_operations_exceeds"> hours exceed hours recorded for work: </string>
    <string name="hour_operations_paid">Hours paid: </string>
    <string name="hour_operations_added_for"> hours added for </string>
    <string name="hour_operations_removed_for"> hours removed for </string>
    <string name="hour_operations_paid_for"> hours paid for </string>
    <string name="admin_tools_view_logs">View Logged Activity</string>
    <string name="log_item_text">Log</string>
    <string name="job_activity_fragment_other">Enter non-standard activity or notes</string>
    <string name="contact_day_of_the_week">Work Day:</string>
    <string name="quick_sheet_item_start">Start</string>
    <string name="quick_sheet_item_finish">Finish</string>
    <string name="quick_sheet_title">Quick Sheet</string>
    <string name="quick_sheet_date">Date:</string>
    <string name="quick_sheet_dash">-</string>
    <string name="quick_sheet_date_error">There was an error with the start - end date combination.
        Please check the dates are correct.</string>
    <string name="receive_payment_empty_check">The check number is blank. Please reenter the check
        number.</string>
    <string name="receive_payment_greater_than_zero">Please enter an amount greater than 0.</string>
    <string name="receive_payment_enter_amount">Please enter in an amount for the payment.</string>
    <string name="receive_payment_post_apply">If this is the correct amount, have admin apply paid
        status to service.</string>
    <string name="receive_payment_incorrect_service">Please apply payment to the correct service.</string>
    <string name="receive_payment_amount_mismatch">The payment amount does not match the selected
        service. Amount will be applied to the service anyway. Proceed with payment?</string>
    <string name="receive_payment_complete_service_error">Complete service and then apply payment to
        the correct service or apply to general account.</string>
    <string name="receive_payment_no_finished_error">No, finished services found.
        Credit account with payment?</string>
    <string name="receive_payment_general_payment">General Payment</string>
    <string name="receive_payment_paid"> PAID </string>
    <string name="settings_fragment_select_file">Select a file</string>
    <string name="settings_fragment_contacts_add">contacts added</string>
    <string name="settings_fragment_import">IMPORT</string>
    <string name="settings_invalid_connection">Database connection is not valid. Check connectivity
        and database uri/database name.</string>
    <string name="view_services_text">Services</string>
    <string name="view_services_all">All</string>
    <string name="view_services_in_progress">In-Progress</string>
    <string name="view_services_completed">Completed</string>
    <string name="view_services_start_date">Start Date</string>
    <string name="view_services_end_date">End Date</string>
    <string name="view_services_customer">Customer</string>
    <string name="view_services_view_by">View By</string>
    <string name="view_services_sort_by">Sort By</string>
    <string name="view_services_mileage">Mileage:</string>
    <string name="admin_tools_view_services">View Services</string>
    <string name="view_services_search">Search</string>
    <string name="pref_settings_quick_sheet_items_title">Quick Sheet Selections</string>
    <string name="pre_settings_quick_sheet_selections_summary">A selection of three items used to
    quickly start and finish jobs. Selections appear as checkboxes on the Quick Sheets screen. The
        default selection is cut, prune, and spray.</string>
    <string name="csv_date">Date</string>
    <string name="activity_add_expense">Add Expense</string>
    <string name="activity_add_expense_price">100.00</string>
    <string name="activity_add_expense_name">Gas Station</string>
    <string name="activity_add_expense_credit">Credit Card</string>
    <string name="activity_add_expense_debit">Debit Card</string>
    <string name="activity_add_expense_number">Last 4 digits</string>
    <string name="add_user_new_type">Add new expense type</string>
    <string name="add_expense_show_add">Show Add Type</string>
</resources>