<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add_contact"
        android:title="@string/menu_add_contact"
        app:showAsAction="always" />
    <item android:title="@string/menu_add_landscaping" />
    <item
        android:id="@+id/menu_dashboard"
        android:title="@string/menu_dashboard"
        app:showAsAction="never" />
    <item android:title="@string/menu_add_grass" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_add_service"
        android:title="@string/menu_add_snow"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>