<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LawnServices">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.GridLayout
            android:id="@+id/gridLayout4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/lawn_services_prune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawn_services_prune"
                android:textSize="18sp"
                app:layout_column="1"
                app:layout_row="4" />

            <CheckBox
                android:id="@+id/lawn_services_clean_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawn_services_clean_up"
                android:textSize="18sp"
                app:layout_column="2"
                app:layout_row="4" />

            <CheckBox
                android:id="@+id/lawn_services_aerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawn_services_aerate"
                android:textSize="18sp"
                app:layout_column="1"
                app:layout_row="2" />

            <CheckBox
                android:id="@+id/lawn_services_cut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawn_services_cut"
                android:textSize="18sp"
                app:layout_column="1"
                app:layout_row="0" />

            <CheckBox
                android:id="@+id/lawn_services_spray_landscape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawn_services_spray_rocks"
                android:textSize="18sp"
                app:layout_column="1"
                app:layout_row="1" />

            <CheckBox
                android:id="@+id/lawn_services_spray_grass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawn_services_spray_grass"
                android:textSize="18sp"
                app:layout_column="2"
                app:layout_row="0" />

            <CheckBox
                android:id="@+id/lawn_services_pull_weeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/law_services_pull_weed"
                android:textSize="18sp"
                app:layout_column="2"
                app:layout_row="2" />

            <CheckBox
                android:id="@+id/lawn_services_fertilize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawn_services_fertilize"
                android:textSize="18sp"
                app:layout_column="2"
                app:layout_row="1" />

            <CheckBox
                android:id="@+id/lawn_services_rake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawn_services_rake"
                android:textSize="18sp"
                app:layout_column="2"
                app:layout_row="3" />

            <CheckBox
                android:id="@+id/lawn_services_remove_leaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawn_services_leaves"
                android:textSize="18sp"
                app:layout_column="1"
                app:layout_row="3" />

        </android.support.v7.widget.GridLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>