<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewContact">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/contact_first_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="37dp"
        android:text="@string/contact_last_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="145dp"
        android:layout_height="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/contact_phone_number"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_phone_number_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/contact_email"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_email_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/contact_business"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_business_text"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/contact_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="56dp"
        android:onClick="addNewCustomer"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_phone_number_text" />

    <EditText
        android:id="@+id/contact_first_name_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/contact_first_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contact_last_name_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/contact_last_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_first_name_text" />

    <EditText
        android:id="@+id/contact_phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/phone_number_example"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_state_spinner" />

    <EditText
        android:id="@+id/contact_email_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/contact_business_text"
        app:layout_constraintTop_toBottomOf="@+id/contact_last_name_text" />

    <EditText
        android:id="@+id/contact_business_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/contact_business_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/contact_address_text"
        app:layout_constraintTop_toBottomOf="@+id/contact_email_text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/contact_address"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_address_text"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/contact_address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/address_example"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="@+id/contact_city_text"
        app:layout_constraintTop_toBottomOf="@+id/contact_business_text" />

    <EditText
        android:id="@+id/contact_city_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/city_example"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/contact_phone_number_text"
        app:layout_constraintTop_toBottomOf="@+id/contact_address_text" />

    <Spinner
        android:id="@+id/contact_state_spinner"
        style="@style/Platform.Widget.AppCompat.Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="107dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="16dp"
        android:entries="@array/US_states_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/contact_city_text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="39dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/contact_city"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_city_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/contact_state"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_state_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/day_of_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginLeft="134dp"
        android:layout_marginRight="35dp"
        android:layout_marginStart="134dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/contact_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>